[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeltime_resample_py"
version = "0.2.0"
authors = [
  { name="ModelTime Contributors", email="contributors@modeltime-resample-py.org" },
]
description = "A Python package for time series cross-validation, resampling, model fitting, and evaluation inspired by R's modeltime.resample package."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pandas",
]
keywords = [
    "time-series",
    "cross-validation",
    "resampling",
    "backtesting",
    "machine-learning",
    "forecasting",
    "pandas",
    "scikit-learn"
]
dependencies = [
    "pandas>=1.1.0",
    "numpy>=1.19.0",
    "scikit-learn>=0.22.0",
    "matplotlib>=3.3.0",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
plotly = ["plotly>=5.0.0"]
dash = [
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
    "pre-commit>=2.17.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "nbsphinx>=0.8.0",
]
all = [
    "modeltime_resample_py[plotly,dash,dev,docs]",
]

[project.urls]
"Homepage" = "https://github.com/modeltime-contributors/py-modeltime-resample"
"Bug Tracker" = "https://github.com/modeltime-contributors/py-modeltime-resample/issues"
"Documentation" = "https://modeltime-resample-py.readthedocs.io"
"Source Code" = "https://github.com/modeltime-contributors/py-modeltime-resample"

[tool.setuptools.packages.find]
where = ["."]
include = ["modeltime_resample_py*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["modeltime_resample_py"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
] 